# cmakex

./: .gitignore  LICENSE  README.md  cmake.exs  example_cmake.exs  mix.exs
lib/: cmakex.ex
lib/cmakex/: exceptions.ex  guards.ex  process.ex  sigils.ex  templates.ex  utils.ex
lib/cmakex/templates/: add_library.ex  add_subdirectory.ex  conditions.ex  function.ex  message.ex  project.ex  target_compile_options.ex  target_include_directories.ex  target_link_libraries.ex
lib/example/: nif.ex
native_c/: hello.cpp
natives/: CMakeLists.txt
priv/native_c/: hello.cpp
